Bug 161600 - Tooltip background color ignores system setting, patch by Nils Maier <MaierMan@web.de>, r=pavlov, sr=roc